# WondyFrame

./: .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json  policy.md  procfile  terms.md
.github/: dependabot.yml
API/: discord.js  warframe.js
Commands/: baro.js  cambion.js  cetus.js  deimos.js  earth.js  fissure.js  fortuna.js  help.js  invasion.js  invasions.js  item.js  nightwave.js  privacy.js  relic.js  relicOld.js  sortie.js  stats.js  test.js
Handling/: botOnReady.js  helperMethods.js  messageHandler.js  sortWarframeData.js  warframeHandler.js
OLD/: app.js  package.json  (+1 more)
wondyframe/: Cargo.toml
wondyframe/src/: main.rs
wondyframe/src/api/: mod.rs  warframe_client.rs  warframe_drops.rs  warframe_drops_client.rs
wondyframe/src/commands/: archimedea.rs  archon.rs  baro.rs  cetus.rs  deimos.rs  fissure.rs  fissures.rs  fortuna.rs  item.rs  mod.rs  nightwave.rs  teshin.rs
wondyframe/src/deserializers/: deserialize_rewards.rs  mod.rs
wondyframe/src/enums/: archimedea_type.rs  colors.rs  difficulty.rs  emojis.rs  mod.rs  thumbnail.rs
wondyframe/src/models/: archimedea.rs  archon.rs  data.rs  fissure.rs  mod.rs  nightwave.rs  steelpath.rs  tier.rs  void_trader.rs
wondyframe/src/models/drop_data/: blueprint_locations.rs  cetus_bounty_rewards.rs  enemy_blueprint_tables.rs  enemy_mod_tables.rs  info.rs  misc_items.rs  mission_rewards.rs  mod.rs  mod_locations.rs  relics.rs  sortie_rewards.rs  syndicates.rs  transient_rewards.rs  zariman_rewards.rs
wondyframe/src/services/: drops_service.rs  mod.rs
wondyframe/src/types/: context.rs
wondyframe/src/utils/: components.rs  date.rs  mod.rs
(+56 files in other folders)
