[package]
name = "wondyframe"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false,  features = ["json"] }
serde = { version = "1.0", default-features = false,  features = ["derive"] }
serde_json = "1.0"
warframe = "9.0.1"
log = "0.4.27"
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
